--- a/index.html
+++ b/index.html
@@ -1,53 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Snake-Task_sixhands</title>
-  </head>
-  <body style="margin: 0; overflow: hidden;" oncontextmenu="return false;">
-	  <canvas id="unity-canvas" style="position: fixed; width: 100%; height: 100%; background: #231F20">
-	  </canvas>
-	  <div id="progress-bar" style="position: absolute; left: 0%; right: 100%; top: 49%; bottom: 49%; background-color: white;"></div>
-    
-    <script src="Build/v1.3.loader.js"></script>
-	<script>
-		const settings = {
-			dataUrl: "Build/v1.3.data.unityweb",
-			frameworkUrl: "Build/v1.3.framework.js.unityweb",
-			codeUrl: "Build/v1.3.wasm.unityweb",
-			streamingAssetsUrl: "StreamingAssets",
-			companyName: "Qiyas",
-			productName: "Snake-Task_sixhands",
-			productVersion: "0.1.0",
-			matchWebGLToCanvasSize: true,
-			devicePixelRatio: 1.5,
-		};
 
-		const progressBar = document.querySelector("#progress-bar");
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <title>qubix-prototype-pvpve</title>
+</head>
 
-		setTimeout(() => {
-				createUnityInstance(document.querySelector("#unity-canvas"), settings, (progress) => {
-				progressBar.style.right = 100 * (1 - progress) + "%";
-			}).then(() => {
-				progressBar.style.display = "none";
-			}).catch((message) => {
-				alert(message);
-			});
-		}, 500); // Makes page more responsive on reload.
-	</script>
-	</body>
+<body style="margin: 0px; overflow: hidden;" oncontextmenu="return false;">
+  <canvas id="unity-canvas"
+    style="position: fixed; width: 100%; height: 100%; background: #231F20">
+  </canvas>
+
+  <div id="progress-bar" style="position: absolute; left: 0%; right: 100%; top: 49%; bottom: 49%; background-color: white;"></div>
+
+  <script src="Build/Build.loader.js"></script>
+  <script>
+    const isMobileDevice = /Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent);
+
+    const settings = {
+      dataUrl: "Build/Build.data.unityweb",
+      frameworkUrl: "Build/Build.framework.js.unityweb",
+      codeUrl: "Build/Build.wasm.unityweb",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "qubix-prototype-pvpve",
+      productVersion: "0.1",
+      matchWebGLToCanvasSize: true,
+      devicePixelRatio: !isMobileDevice ? 2 : 1.6,
+    };
+
+    const progressBar = document.querySelector("#progress-bar");
+
+    setTimeout(() => {
+      createUnityInstance(document.querySelector("#unity-canvas"), settings, (progress) => {
+        progressBar.style.right = 100 * (1 - progress) + "%";
+      }).then(() => {
+        progressBar.style.display = "none";
+      }).catch((message) => {
+        alert(message);
+      });
+    }, 500); // Wait half a second before loading. Makes page more responsive on reload.
+  </script>
+</body>
+
 </html>
-
-<style>
-body 
-{
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
-</style>
